--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,9 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# data
+/data/raw/images/*
+/data/raw/masks/*
+/data/processed/*
+/data/features/*
