--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,94 @@
+acvl_utils==0.2.5
+asttokens==3.0.0
+batchgenerators==0.25.1
+batchgeneratorsv2==0.3.0
+blosc2==3.4.0
+certifi==2025.6.15
+charset-normalizer==3.4.2
+connected-components-3d==3.24.0
 contourpy==1.3.2
 cycler==0.12.1
+decorator==5.2.1
+dicom2nifti==2.6.1
+dynamic_network_architectures==0.4.2
+einops==0.8.1
+executing==2.2.0
+fft-conv-pytorch==1.2.0
 filelock==3.18.0
 fonttools==4.58.4
 fsspec==2025.5.1
+future==1.0.0
+graphviz==0.21
+hf-xet==1.1.5
+hiddenlayer==0.3
+huggingface-hub==0.33.0
+idna==3.10
+imagecodecs==2025.3.30
+imageio==2.37.0
 importlib_resources==6.5.2
+ipython==9.3.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
 Jinja2==3.1.6
 joblib==1.5.1
 kiwisolver==1.4.8
+lazy_loader==0.4
+linecache2==1.0.0
 llvmlite==0.44.0
 MarkupSafe==3.0.2
 matplotlib==3.10.3
+matplotlib-inline==0.1.7
+MedPy==0.5.2
 mpmath==1.3.0
+msgpack==1.1.1
+ndindex==1.10.0
 networkx==3.5
 nibabel==5.3.2
+nnunetv2==2.6.2
 numba==0.61.2
+numexpr==2.11.0
 numpy==2.2.6
 opencv-python==4.11.0.86
 packaging==25.0
 pandas==2.3.0
+parso==0.8.4
+pexpect==4.9.0
 pillow==11.2.1
+platformdirs==4.3.8
+prompt_toolkit==3.0.51
+ptyprocess==0.7.0
+pure_eval==0.2.3
+py-cpuinfo==9.0.0
+pydicom==3.0.1
+Pygments==2.19.2
 pynndescent==0.5.13
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+python-gdcm==3.0.25
 pytz==2025.2
+PyYAML==6.0.2
+requests==2.32.4
+safetensors==0.5.3
+scikit-image==0.25.2
 scikit-learn==1.7.0
 scipy==1.15.3
 seaborn==0.13.2
+simpleitk==2.5.2
 six==1.17.0
+stack-data==0.6.3
 sympy==1.14.0
 threadpoolctl==3.6.0
+tifffile==2025.6.11
+timm==1.0.15
 torch==2.7.1
 torchvision==0.22.1
 tqdm==4.67.1
+traceback2==1.4.0
+traitlets==5.14.3
 typing_extensions==4.14.0
 tzdata==2025.2
 umap-learn==0.5.7
+unittest2==1.1.0
+urllib3==2.5.0
+wcwidth==0.2.13
+yacs==0.1.8
