update new ensamble method

--- a/.gitignore
+++ b/.gitignore
@@ -201,3 +201,4 @@ cython_debug/
 /data/nnunet/nnUNet_preprocessed/Dataset201_MyTask/*
 /data/nnunet/nnUNet_raw/Dataset201_MyTask/*
 /data/nnunet/nnUNet_trained_models/Dataset201_MyTask/*
+/data/nnunet/evaluation/*
