--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,6 @@ cython_debug/
 /data/nnunet/nnUNet_raw/Dataset201_MyTask/*
 /data/nnunet/nnUNet_trained_models/Dataset201_MyTask/*
 /data/nnunet/evaluation/*
+
+# Ignore DS_Store files
+.DS_Store
