--- a/.gitignore
+++ b/.gitignore
@@ -202,6 +202,7 @@ cython_debug/
 /data/nnunet/nnUNet_raw/Dataset201_MyTask/*
 /data/nnunet/nnUNet_trained_models/Dataset201_MyTask/*
 /data/nnunet/evaluation/*
+/data/transunet/*
 
 # Ignore DS_Store files
 .DS_Store
