--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ MarkupSafe==3.0.2
 matplotlib==3.10.3
 matplotlib-inline==0.1.7
 MedPy==0.5.2
+monai==1.5.0
 mpmath==1.3.0
 msgpack==1.1.1
 ndindex==1.10.0
@@ -76,12 +77,12 @@ seaborn==0.13.2
 simpleitk==2.5.2
 six==1.17.0
 stack-data==0.6.3
-sympy==1.14.0
+sympy==1.13.1
 threadpoolctl==3.6.0
 tifffile==2025.6.11
 timm==1.0.15
-torch==2.7.1
-torchvision==0.22.1
+torch==2.6.0
+torchvision==0.21.0
 tqdm==4.67.1
 traceback2==1.4.0
 traitlets==5.14.3
