--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.3.1
 acvl_utils==0.2.5
 asttokens==3.0.0
 batchgenerators==0.25.1
@@ -19,6 +20,7 @@ fonttools==4.58.4
 fsspec==2025.5.1
 future==1.0.0
 graphviz==0.21
+grpcio==1.74.0
 hf-xet==1.1.5
 hiddenlayer==0.3
 huggingface-hub==0.33.0
@@ -35,6 +37,7 @@ kiwisolver==1.4.8
 lazy_loader==0.4
 linecache2==1.0.0
 llvmlite==0.44.0
+Markdown==3.8.2
 MarkupSafe==3.0.2
 matplotlib==3.10.3
 matplotlib-inline==0.1.7
@@ -57,6 +60,7 @@ pexpect==4.9.0
 pillow==11.2.1
 platformdirs==4.3.8
 prompt_toolkit==3.0.51
+protobuf==6.32.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 py-cpuinfo==9.0.0
@@ -78,6 +82,8 @@ simpleitk==2.5.2
 six==1.17.0
 stack-data==0.6.3
 sympy==1.13.1
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
 threadpoolctl==3.6.0
 tifffile==2025.6.11
 timm==1.0.15
@@ -92,4 +98,5 @@ umap-learn==0.5.7
 unittest2==1.1.0
 urllib3==2.5.0
 wcwidth==0.2.13
+Werkzeug==3.1.3
 yacs==0.1.8
