--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 absl-py==2.3.1
 acvl_utils==0.2.5
+annotated-types==0.7.0
 asttokens==3.0.0
 batchgenerators==0.25.1
 batchgeneratorsv2==0.3.0
 blosc2==3.4.0
 certifi==2025.6.15
 charset-normalizer==3.4.2
+click==8.2.1
 connected-components-3d==3.24.0
 contourpy==1.3.2
 cycler==0.12.1
@@ -19,6 +21,8 @@ filelock==3.18.0
 fonttools==4.58.4
 fsspec==2025.5.1
 future==1.0.0
+gitdb==4.0.12
+GitPython==3.1.45
 graphviz==0.21
 grpcio==1.74.0
 hf-xet==1.1.5
@@ -42,7 +46,7 @@ MarkupSafe==3.0.2
 matplotlib==3.10.3
 matplotlib-inline==0.1.7
 MedPy==0.5.2
-monai==1.5.0
+monai @ git+https://github.com/Project-MONAI/MONAI.git@cafc1feb5063ccbc206a71d2f006b3ea386a74b4
 mpmath==1.3.0
 msgpack==1.1.1
 ndindex==1.10.0
@@ -64,6 +68,8 @@ protobuf==6.32.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 py-cpuinfo==9.0.0
+pydantic==2.11.7
+pydantic_core==2.33.2
 pydicom==3.0.1
 Pygments==2.19.2
 pynndescent==0.5.13
@@ -78,8 +84,10 @@ scikit-image==0.25.2
 scikit-learn==1.7.0
 scipy==1.15.3
 seaborn==0.13.2
+sentry-sdk==2.35.0
 simpleitk==2.5.2
 six==1.17.0
+smmap==5.0.2
 stack-data==0.6.3
 sympy==1.13.1
 tensorboard==2.20.0
@@ -92,11 +100,13 @@ torchvision==0.21.0
 tqdm==4.67.1
 traceback2==1.4.0
 traitlets==5.14.3
+typing-inspection==0.4.1
 typing_extensions==4.14.0
 tzdata==2025.2
 umap-learn==0.5.7
 unittest2==1.1.0
 urllib3==2.5.0
+wandb==0.21.1
 wcwidth==0.2.13
 Werkzeug==3.1.3
 yacs==0.1.8
