--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ MarkupSafe==3.0.2
 matplotlib==3.10.3
 matplotlib-inline==0.1.7
 MedPy==0.5.2
-monai @ git+https://github.com/Project-MONAI/MONAI.git@cafc1feb5063ccbc206a71d2f006b3ea386a74b4
+monai==1.5.0
 mpmath==1.3.0
 msgpack==1.1.1
 ndindex==1.10.0
